<resources>
    <string name="app_name">InkspireHub-Mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">johndoe@gmail.com</string>
    <string name="password_hint">********</string>
    <string name="SignUp">SignUp</string>
    <string name="Login">Login</string>
    <string name="dont_have_account">don\'t have an account? SignUp</string>
</resources>